--- a/bai7/index.html
+++ b/bai7/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bài 6 - Sổ tay Git Cơ bản cho người mới1 </title>
+    <title>Nền tảng Lập trình Hướng đối tượng (OOP) </title>
 </head>
 <body>
-    <script src="bai6.js"></script>
+    <script src="bai7.js"></script>
 </body>
 </html>
